Stage 2/4: Add & config (nice refactoring)

--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/526012/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Mon, 04 Jul 2022 16:41:29 UTC
+update_date: Tue, 05 Jul 2022 06:11:15 UTC
 stages:
 - id: 909
   step: 13042
   is_completed: true
 - id: 910
   step: 13043
-  is_completed: false
+  is_completed: true
 - id: 911
   step: 13044
   is_completed: false
