--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/526012/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Wed, 06 Jul 2022 05:34:20 UTC
+update_date: Wed, 06 Jul 2022 15:34:25 UTC
 stages:
 - id: 909
   step: 13042
@@ -13,7 +13,7 @@ stages:
   is_completed: true
 - id: 911
   step: 13044
-  is_completed: false
+  is_completed: true
 - id: 912
   step: 13045
   is_completed: false
