--- a/Version Control System/Checkout time/task-info.yaml
+++ b/Version Control System/Checkout time/task-info.yaml
@@ -435,5 +435,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/13045#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Thu, 07 Jul 2022 08:49:34 UTC
+record: 4
