--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/526012/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Wed, 06 Jul 2022 15:34:25 UTC
+update_date: Thu, 07 Jul 2022 06:18:38 UTC
 stages:
 - id: 909
   step: 13042
@@ -16,7 +16,7 @@ stages:
   is_completed: true
 - id: 912
   step: 13045
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Binary numbers
